// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PickupOrDelivery stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Free pickup in
            </span>
            <button
              class="text-xs text-primary mt-0.5 text-left hover:underline"
              type="button"
            >
              Select Store
            </button>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > DeliveryDisabled story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs border-muted-foreground/20 hover:border-primary/50 opacity-50 cursor-not-allowed"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-disabled=""
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          disabled=""
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Free pickup in
            </span>
            <div
              class="mt-0.5"
            >
              <button
                class="text-xs text-primary hover:underline"
                type="button"
              >
                Downtown Store
              </button>
              <p
                class="text-xs font-normal text-muted-foreground mt-1"
              >
                Now available for pickup today.
              </p>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > DesktopLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Free pickup in
            </span>
            <div
              class="mt-0.5"
            >
              <button
                class="text-xs text-primary hover:underline"
                type="button"
              >
                Downtown Store
              </button>
              <p
                class="text-xs font-normal text-muted-foreground mt-1"
              >
                Now available for pickup today.
              </p>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > MobileLayout story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Free pickup in
            </span>
            <button
              class="text-xs text-primary mt-0.5 text-left hover:underline"
              type="button"
            >
              Select Store
            </button>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > NoStoreSelected story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Free pickup in
            </span>
            <button
              class="text-xs text-primary mt-0.5 text-left hover:underline"
              type="button"
            >
              Select Store
            </button>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > PickupDisabled story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs border-muted-foreground/20 hover:border-primary/50 opacity-50 cursor-not-allowed"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-disabled=""
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          disabled=""
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Pickup unavailable at
            </span>
            <div
              class="mt-0.5"
            >
              <button
                class="text-xs text-primary hover:underline"
                type="button"
              >
                Downtown Store
              </button>
              <p
                class="text-xs font-normal text-destructive mt-1"
              >
                Try another store
              </p>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PickupOrDelivery stories snapshot > PickupSelected story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      aria-required="false"
      class="grid grid-cols-2 gap-2"
      data-slot="radio-group"
      data-testid="delivery-option-select"
      dir="ltr"
      role="radiogroup"
      style="outline: none;"
      tabindex="0"
    >
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
        data-slot="label"
        for="delivery-option"
      >
        <button
          aria-checked="false"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="unchecked"
          id="delivery-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="delivery"
        />
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Deliver to
            </span>
            <p
              class="text-xs text-muted-foreground mt-0.5"
            >
              Enter ZIP code to see delivery estimate
            </p>
          </div>
        </div>
      </label>
      <label
        class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 p-3 rounded-lg border transition-colors text-left shadow-xs cursor-pointer border-primary"
        data-slot="label"
        for="pickup-option"
      >
        <button
          aria-checked="true"
          class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
          data-radix-collection-item=""
          data-slot="radio-group-item"
          data-state="checked"
          id="pickup-option"
          role="radio"
          tabindex="-1"
          type="button"
          value="pickup"
        >
          <span
            class="relative flex items-center justify-center"
            data-slot="radio-group-indicator"
            data-state="checked"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle fill-primary absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
          </span>
        </button>
        <div
          class="mt-0.5 shrink-0"
        >
          <div
            class="w-4 h-4 rounded-full border-2 flex items-center justify-center transition-colors border-primary"
          >
            <div
              class="w-2.5 h-2.5 rounded-full bg-primary"
            />
          </div>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-xs font-medium text-foreground"
            >
              Free pickup in
            </span>
            <div
              class="mt-0.5"
            >
              <button
                class="text-xs text-primary hover:underline"
                type="button"
              >
                Downtown Store
              </button>
              <p
                class="text-xs font-normal text-muted-foreground mt-1"
              >
                Now available for pickup today.
              </p>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;
